--- a/templates/chat.html
+++ b/templates/chat.html
@@ -6,6 +6,7 @@
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
         <script src="/script.js"></script>
+        <link href="/style.css" rel="stylesheet">
         <style type="text/css">
             .fixed-panel {
                 min-height: 400px;
@@ -18,7 +19,7 @@
     <body>
         <div class="container">
 			<div class="row">
-                <h1 class="text-center">Edu Buddy</h1>
+                <h1 class="text-center"><img src="https://see.fontimg.com/api/renderfont4/MG0p/eyJyIjoiZnMiLCJoIjo2NSwidyI6MTAwMCwiZnMiOjY1LCJmZ2MiOiIjMDAwMDAwIiwiYmdjIjoiI0ZGRkZGRiIsInQiOjF9/RWR1IEJ1ZGR5/honeybeeregular.png" alt="Cute fonts"></a></h1>
                 <div class="col-md-12">
                     <div class="panel panel-info">
                         <div class="panel-heading">
