--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,7 @@
-body {background-color: #000091;
-opacity: 0.7;
-background-image:  linear-gradient(135deg, #a8a8a8 25%, transparent 25%), linear-gradient(225deg, #a8a8a8 25%, transparent 25%), linear-gradient(45deg, #a8a8a8 25%, transparent 25%), linear-gradient(315deg, #a8a8a8 25%, #000091 25%);
-background-position:  40px 0, 40px 0, 0 0, 0 0;
-background-size: 80px 80px;
-background-repeat: repeat;
+body{background-color: #8BC6EC;
+background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+height: 100%;
+margin: 0;
+background-repeat: no-repeat;
+background-attachment: fixed;
 }
