--- a/templates/chat.html
+++ b/templates/chat.html
@@ -3,9 +3,10 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title>Edu Buddy</title>
+	<script src="https://code.jquery.com/jquery-1.12.4.js" integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU=" crossorigin="anonymous"></script>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
-        <script src="/script.js"></script>
+	<script src="/script.js"></script>
         <link href="/style.css" rel="stylesheet">
         <style type="text/css">
             .fixed-panel {
@@ -49,7 +50,6 @@
                 </div>
             </div>
         </div>
-        <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <script>
         $(function() {
