--- a/templates/wordcloud.html
+++ b/templates/wordcloud.html
@@ -2,7 +2,9 @@
 <head>
 <title>Word Cloud</title>
 <body>
-<img src="{{url_for('static', filename='wordcloud.png')}}">
+<h1>Word Cloud</h1>
+<h2>Word Frequency Distribution</h2>
+<img style=":width:60%;"src="{{url_for('static', filename='wordcloud.png')}}">
 </body>
 </head>
 </html>
