--- a/templates/chat.html
+++ b/templates/chat.html
@@ -44,7 +44,8 @@
                             </form>                    
                             <form action="/wordcloud" method="post" style="display:flex; flex-direction:row-reverse; justify-content:flex-start; margin-top:5px;"> 
                                 <button class="btn btn-info" type="submit" id="wordcloudbtn" style="max-width:150px;">WORD CLOUD</button>
-                            </form>
+                           		<p>Please wait for the message to disapear, DO NOT send multiple messages.</p>
+				 </form>
                             <form action="/restart" method="get" style="display:flex; flex-direction:row-reverse; justify-content:flex-start; margin-top:5px;"> 
                                 <button class="btn btn-info" type="submit" id="restartbtn" style="max-width:150px;">RESTART</button>
                             </form>
